<resources>
    <!-- App Activities -->
    <string name="app_name">Dokmus Randomizer</string>
    <string name="title_activity_main">Dokmus Randomizer</string>
    <string name="title_activity_settings">Randomizer Settings</string>
    <string name="title_activity_about">About this App</string>
    <!-- App Settings -->
    <string name="map_tile_rotation">Map Tile Rotation</string>
    <string name="two_players">Limit Map to Two Player Size</string>
    <string name="return_to_erefel_expansion">Include Return of Erefel Expansion</string>
    <!-- Scenario Text -->
    <string name="scenario_text_ice">ICE</string>
    <string name="scenario_text_sun">SUN</string>
    <string name="scenario_text_winds">WINDS</string>
    <string name="scenario_text_water">WATER</string>
    <!-- Options Menu Item Actions -->
    <string name="action_randomizer">Randomizer</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <!-- About -->
    <string name="author_label">About the Author</string>
    <string name="about_the_author">\tThis app was created by Tylor Lilley. I am unaffiliated with Renegade Games, and am simply a fan of Dokmus who wanted to make this randomization tool for his own personal use. I have decided to release it for free in case there are other fans who would like to use it as well. If you\'d like to get in touch with me or play some of the video games I have created, please feel free to visit my website at <a href="https://tylorlilley.com">https://tylorlilley.com</a>.</string>
    <string name="game_label">About the Game</string>
    <string name="about_the_game">\tDokmus is a board game that was first published by Renegade Game Studios in 2016. It is designed by Mikko Punakallio. It is an abstract area control game for 2–4 players.</string>
    <string name="app_label">About the App</string>
    <string name="about_the_app1">\tThis app is used to randomize the setup for a game of Dokmus. The number corresponds to the number present on a tile in Dokmus. The letter corresponds to the front or back side of that number\'s tile, and is also printed on the tile alongside the number. The directional arrow indicates which way to rotate the tile, so that the number can be read "right side up" when looking at it in that direction.</string>
     <string name="settings_label">About the Settings</string>
    <string name="about_the_settings1">\tIf you enable the Map Tile Rotation setting, instead of a printed arrow, the map tile on the app will rotate to face the direction that the arrow would have indicated. Some people may find it easier to set up this way.</string>
    <string name="about_the_settings2">\tDokmus can be player with two players using a modified, smaller map. If you wish to use this randomizer to play this way, you can enabled the Limit Map to Two Player Size option.</string>
    <string name="about_the_settings3">\tIf you enable the Return of Erefel expansion, the additional map tiles from that expansion will be added to the mix. They will be color-coded purple to easily tell which tiles will be coming from the expansion, but the tile number given will still uniquely identify them if you\'ve mixed your expansion tiles together with the original game\'s. Additionally, one of the four possible scenarios will be chosen at random and displayed on the center tile for use in this game.</string>
 </resources>